@@ -9,20 +9,20 @@ Input: nums = [0, 1, 3, 50, 75], lower = 0 and upper = 99,
 Output: ["2", "4->49", "51->74", "76->99"]
  */
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class MissingSequences {
 
     public static List<String> findMissingRanges(int[] nums, int lower, int upper) {
         if (nums.length == 0) {
             if (lower == upper) {
-                return Arrays.asList("" + lower);
+                return List.of("" + lower);
             }
-            return Arrays.asList(lower + "->" + upper);
+            return List.of(lower + "->" + upper);
         }
         ArrayList<String> result = new ArrayList<>();
 
@@ -61,36 +61,36 @@ public class MissingSequences {
 
     public static void main(String[] args) {
         assertEquals(Arrays.asList("2", "4->49", "51->74", "76->99"),
-            findMissingRanges(new int[]{0, 1, 3, 50, 75}, 0, 99));
+                findMissingRanges(new int[]{0, 1, 3, 50, 75}, 0, 99));
 
-        assertEquals(Arrays.asList("0->99"),
-            findMissingRanges(new int[]{}, 0, 99));
+        assertEquals(List.of("0->99"),
+                findMissingRanges(new int[]{}, 0, 99));
 
         assertEquals(Arrays.asList("0->49", "51->99"),
-            findMissingRanges(new int[]{50}, 0, 99));
+                findMissingRanges(new int[]{50}, 0, 99));
 
         assertEquals(Arrays.asList("0->49", "52->99"),
-            findMissingRanges(new int[]{50, 51}, 0, 99));
+                findMissingRanges(new int[]{50, 51}, 0, 99));
 
         assertEquals(Arrays.asList("0", "2->49", "51->98"),
-            findMissingRanges(new int[]{1, 50, 99}, 0, 99));
+                findMissingRanges(new int[]{1, 50, 99}, 0, 99));
 
-        assertEquals(Arrays.asList("0"),
-            findMissingRanges(new int[]{1}, 0, 1));
+        assertEquals(List.of("0"),
+                findMissingRanges(new int[]{1}, 0, 1));
 
-        assertEquals(Arrays.asList("0"),
-            findMissingRanges(new int[]{1, 2, 3, 4}, 0, 4));
+        assertEquals(List.of("0"),
+                findMissingRanges(new int[]{1, 2, 3, 4}, 0, 4));
 
-        assertEquals(Arrays.asList(),
-            findMissingRanges(new int[]{0, 1, 2, 3, 4}, 0, 4));
+        assertEquals(List.of(),
+                findMissingRanges(new int[]{0, 1, 2, 3, 4}, 0, 4));
 
-        assertEquals(Arrays.asList("1"),
-            findMissingRanges(new int[]{}, 1, 1));
+        assertEquals(List.of("1"),
+                findMissingRanges(new int[]{}, 1, 1));
 
-        assertEquals(Arrays.asList(),
-            findMissingRanges(new int[]{1}, 1, 1));
+        assertEquals(List.of(),
+                findMissingRanges(new int[]{1}, 1, 1));
 
-        assertEquals(Arrays.asList(),
-            findMissingRanges(new int[]{1, 1, 1}, 1, 1));
+        assertEquals(List.of(),
+                findMissingRanges(new int[]{1, 1, 1}, 1, 1));
     }
 }
